# assignment

./: .gitignore  CMakeLists.txt  CmakeLists.txt
include/: DeribitClient.h  DeribitWebSocketClient.hpp  WebSocketServer.hpp
lib/libcurl/include/: Makefile
lib/libcurl/include/curl/: Makefile
src/: DeribitClient.cpp  DeribitClient.h  DeribitWebSocketClient.cpp  WebSocketServer.cpp  api_connect  main.cpp  test.cpp
